Prepare for java 17 based releases